# rust-course-project

gtk-frontend/: Cargo.toml
gtk-frontend/src/: http.rs  main.rs
gtk-frontend/src/ui/: content.rs  header.rs  logs.rs  mod.rs
gtk-frontend/src/ui/common/: labeledbar.rs  mod.rs  table.rs
gtk-frontend/src/ui/dashboard/: load.rs  memory.rs  mod.rs  processes.rs  processors.rs
gtk-frontend/src/ui/header/: mod.rs  settings.rs
server/: .env  Cargo.toml
server/migrations/2020-02-07-194500_entries/: up.sql
server/src/: db.rs  main.rs  models.rs
server/src/db/: mod.rs  schema.rs
server/src/models/: mod.rs
server/tests/: endpoints.rs
