[package]
name = "gtk-frontend"
version = "0.1.0"
authors = ["nzaharov <nzaharov988@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.11.1"
rand = "0.7.3"
gdk = "0.12.0"
cairo = "0.0.4"
glib = "0.9.1"
[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
